# psp-image-resize

./: CMakeLists.txt  main.c
